--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
             <button>Sign Up</button>
         </div>
         <div class="right-content">
-            <img src="/images/sexy-noodle.jpg" alt="">
+            <img src="images/sexy-noodle.jpg" alt="">
         </div>
     </div>
     <div class="content-2">
         <h2>Noodle News</h2>
         <div class="card-container">
             <div class="card">
-                <img src="/images/halloween-1.jpg" alt="">
+                <img src="images/halloween-1.jpg" alt="">
                 <a href="#">Pastably the Spookiest Halloween Yet!</a>
             </div>
             <div class="card">
-                <img src="/images/singing-bowtie.jpg" alt="">
+                <img src="images/singing-bowtie.jpg" alt="">
                 <a href="#">Orichette and the Bowties announce 2022 Tour Dates</a>
             </div>
             <div class="card">
-                <img src="/images/tortellini.jpg" alt="">
+                <img src="images/tortellini.jpg" alt="">
                 <a href="#">Top 5 BEST Noodles</a>
             </div>
             <div class="card">
-                <img src="/images/impasta.jpg" alt="">
+                <img src="images/impasta.jpg" alt="">
                 <a href="#">How To Spot an Impasta</a>
             </div>
         </div>
